refactor: 리뷰 응답 객체에서 ContentReplyMapper에 의한 null 반환 오류 수정